[package]
name = "gstreamer-livekit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
byteorder = "1.4.3"
gstreamer = "0.21.0"
gstreamer-app = "0.21.0"
gstreamer-sys = "0.21.0"
gstreamer-video = "0.21.0"
gstreamer-pbutils = "0.21.0"
gstreamer-pbutils-sys = "0.21.0"
gstreamer-rtsp = "0.21.0"
gstreamer-rtp = "0.21.0"
gstreamer-webrtc = "0.21.0"
gst-plugin-webrtc = { git = "https://github.com/spiegela/gst-plugin-rs.git", branch = "main" }
tokio = { version = "1.14.0", features = ["full"] }